@@ -117,6 +117,9 @@ Release 0.1.0 - unreleased
     
     S2GRAPH-120: Netty version is conflict with play 2.5.9 (Committed by DOYUNG YOON).
 
+    S2GRAPH-126: SBT error when there is no ~/.m2/settings.xml
+                 (Contributed by Jong Wook Kim<jongwook@nyu.edu>, committed by DOYUNG YOON)
+
   TASKS
 
     S2GRAPH-2: Update document and quick start environment to have recent set-up command changes.
